--- a/light-clients.tex
+++ b/light-clients.tex
@@ -808,6 +808,49 @@ $\null\quad (txt',st_u) \gets User_0(vk, prd, m)$
     \caption{Weak Blindness}    
 \end{figure}
 
+\subsection{Our WBPS scheme}
+
+\subsection{Protocol Description}
+\begin{tikzpicture}
+    \label{fig:protocol-short}
+	\matrix (m)[matrix of nodes, column  sep=1.5cm,row  sep=7mm, nodes={draw=none, anchor=center,text depth=0pt} ]{
+		\textbf{Signer (LC)} & & \textbf{User (SP)}\\[-4mm]
+		& & Generate transaction $\var{tx}$ \\[-7mm]
+		& &  \\[-7mm]
+		&& with abstract $\var{tx}_A$ = $\var{Com}(\var{tx};\rho)$ \\[-7mm]
+		\phantom{x}& $\var{tx}_A$ & \\[-7mm]
+		%\ h=\fun{txid}~\var{tx}
+		% %& ZK.proof $p$ of $P (h,\  \var{tx}_A) = \true$ & \\
+		Produce Blind.  \\[-7mm]
+			Sig. Commitment $\var{R}=g^r$ \\[-7mm]
+		% sign abstract transaction\\[-7mm]
+		& $\var{R}$\\[-7mm]
+		& & Produce challenge $c=H(R,X,\var{tx})$, and  \\[-7mm]
+		& & proof $\pi$ : $\fun{chkSpec}(\var{int_{post}},\var{tx}) = 1$ $\land \var{Com}(\var{tx};\rho)$ \\[-7mm]
+		& $(c,\pi)$ & \\[-7mm]
+		% %& ZK.proof $p$ of $P (h,\  \var{tx}_A) = \true$ & \\
+		 Check proof $\pi$ \\[-7mm]
+		Produce  $s=r+cx$ \\[-7mm]
+		% sign abstract transaction\\[-7mm]
+		& $\var{bsig}$\\[-7mm]	
+		& & Produce signature $\sigma$\\[-7mm]
+		& & from s, where $\sigma = (R,s)$.\\[-7mm]
+		& & Post $(\var{tx},\sigma)$ on-chain.\\
+	};
+	
+	\draw[shorten <=-1.5cm,shorten >=-1.5cm] (m-1-1.south east)--(m-1-1.south west);
+	\draw[shorten <=-1.5cm,shorten >=-1.5cm] (m-1-3.south east)--(m-1-3.south west);
+	%\draw[shorten <=-1cm,shorten >=-1cm,-latex] (m-6-2.south west)--(m-6-2.south east);
+	\draw[shorten <=-1cm,shorten >=-1cm,-latex] (m-5-2.south east)--(m-5-2.south west);
+	\draw[shorten <=-1cm,shorten >=-1cm,-latex] (m-8-2.south west)--(m-8-2.south east);
+	\draw[shorten <=-1cm,shorten >=-1cm,-latex] (m-11-2.south east)--(m-11-2.south west);
+	\draw[shorten <=-1cm,shorten >=-1cm,-latex] (m-14-2.south west)--(m-14-2.south east);
+	%\draw (m-10-2.north west) rectangle (m-19-2.south east);
+\end{tikzpicture}
+\subsection{Security}
+
+Blindness (sketch): If the commitments are perfectly hiding, then the first round does not reveal anything to the adversary. Likewise, the proof  can be simulated with no contradiction (there will always exist a correct witness to proceed with). However, the oracle query cannot be adversarially controlled: $(R,X,m_0)$ and $(R,X,m_1)$ are both known to the adversary. We thus need to replace $m\gets m_b$ with a weaker form.
+
 \section{Analysis}
 
 \textbf{Asset and Non-Asset Compensation.} In our model, we have so far assumed that an SP performs its 
