--- a/lcbib.bib
+++ b/lcbib.bib
@@ -6,6 +6,38 @@
 	url = {https://eprint.iacr.org/2021/1657}
 }
 
+@misc{cryptoeprint:2017/823,
+	author = {Rami Khalil and Arthur Gervais},
+	title = {Revive: Rebalancing Off-Blockchain Payment Networks},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2017/823},
+	year = {2017},
+	url = {https://eprint.iacr.org/2017/823}
+}
+
+@misc{cryptoeprint:2016/260,
+      author = {Jens Groth},
+      title = {On the Size of Pairing-based Non-interactive Arguments},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2016/260},
+      year = {2016},
+      url = {https://eprint.iacr.org/2016/260}
+}
+
+@InProceedings{10.1007/978-3-319-21741-3_1,
+	author="Decker, Christian
+	and Wattenhofer, Roger",
+	editor="Pelc, Andrzej
+	and Schwarzmann, Alexander A.",
+	title="A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels",
+	booktitle="Stabilization, Safety, and Security of Distributed Systems",
+	year="2015",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="3--18",
+	abstract="Bitcoin does not scale, because its synchronization mechanism, the blockchain, limits the maximum rate of transactions the network can process. However, using off-blockchain transactions it is possible to create long-lived channels over which an arbitrary number of transfers can be processed locally between two users, without any burden to the Bitcoin network. These channels may form a network of payment service providers (PSPs). Payments can be routed between any two users in real time, without any confirmation delay. In this work we present a protocol for duplex micropayment channels, which guarantees end-to-end security and allow instant transfers, laying the foundation of the PSP network.",
+	isbn="978-3-319-21741-3"
+}
+
+
 @misc{superlight,
 	author = {Yuan Lu and Qiang Tang and Guiling Wang},
 	title = {Generic Superlight Client for Permissionless Blockchains},
@@ -53,6 +85,12 @@ address="Cham",
 pages="124--160",
 abstract="Many applications of blind signatures, e.g. in blockchains, require compatibility of the resulting signatures with the existing system. This makes blind issuing of Schnorr signatures (now being standardized and supported by major cryptocurrencies) desirable. Concurrent security of the signing protocol is required to thwart denial-of-service attacks.",
 isbn="978-3-031-58723-8"
+}
+
+@misc{circom,
+  title = {{Iden3} Circom Circuit Compiler},
+  howpublished = {\url{https://github.com/iden3/circom}},
+  note = {Accessed: 2025-01-30}
 }
 
 @inproceedings{utxoma,
