--- a/light-clients.tex
+++ b/light-clients.tex
@@ -895,6 +895,8 @@ We assume that our WBPS scheme is meant to extend an existing Schnorr signature 
 
 We use BN254 as the curve for \emph{Groth16} to rely on. The relation is instantiated over an arithmetic circuit with modulus of 254 bits, i.e., the order of the group given by  BN254 has 254 bits.
 
+We encode the message that is to be signed in the Baby JubJub field spanned by
+
 \section{Conclusion}
 
 
