added HD wallets

--- a/lcbib.bib
+++ b/lcbib.bib
@@ -1,183 +1,174 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
+
+%% Created for Pyrros at 2025-05-19 13:04:37 +0300 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@misc{bip32,
+	author = {Pieter Wuille},
+	date-added = {2025-05-19 13:04:32 +0300},
+	date-modified = {2025-05-19 13:04:37 +0300},
+	howpublished = {\url{https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki#user-content-Full_wallet_sharing_m}},
+	title = {{BIP} 0032: Hierarchical Deterministic Wallets},
+	year = {2012}}
+
 @misc{soklc,
 	author = {Panagiotis Chatzigiannis and Foteini Baldimtsi and Konstantinos Chalkias},
-	title = {{SoK}: Blockchain Light Clients},
 	howpublished = {Cryptology {ePrint} Archive, Paper 2021/1657},
+	title = {{SoK}: Blockchain Light Clients},
+	url = {https://eprint.iacr.org/2021/1657},
 	year = {2021},
-	url = {https://eprint.iacr.org/2021/1657}
-}
+	bdsk-url-1 = {https://eprint.iacr.org/2021/1657}}
 
 @misc{cryptoeprint:2017/823,
 	author = {Rami Khalil and Arthur Gervais},
-	title = {Revive: Rebalancing Off-Blockchain Payment Networks},
 	howpublished = {Cryptology {ePrint} Archive, Paper 2017/823},
+	title = {Revive: Rebalancing Off-Blockchain Payment Networks},
+	url = {https://eprint.iacr.org/2017/823},
 	year = {2017},
-	url = {https://eprint.iacr.org/2017/823}
-}
+	bdsk-url-1 = {https://eprint.iacr.org/2017/823}}
 
 @misc{cryptoeprint:2016/260,
-      author = {Jens Groth},
-      title = {On the Size of Pairing-based Non-interactive Arguments},
-      howpublished = {Cryptology {ePrint} Archive, Paper 2016/260},
-      year = {2016},
-      url = {https://eprint.iacr.org/2016/260}
-}
+	author = {Jens Groth},
+	howpublished = {Cryptology {ePrint} Archive, Paper 2016/260},
+	title = {On the Size of Pairing-based Non-interactive Arguments},
+	url = {https://eprint.iacr.org/2016/260},
+	year = {2016},
+	bdsk-url-1 = {https://eprint.iacr.org/2016/260}}
 
-@InProceedings{10.1007/978-3-319-21741-3_1,
-	author="Decker, Christian
-	and Wattenhofer, Roger",
-	editor="Pelc, Andrzej
-	and Schwarzmann, Alexander A.",
-	title="A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels",
-	booktitle="Stabilization, Safety, and Security of Distributed Systems",
-	year="2015",
-	publisher="Springer International Publishing",
-	address="Cham",
-	pages="3--18",
-	abstract="Bitcoin does not scale, because its synchronization mechanism, the blockchain, limits the maximum rate of transactions the network can process. However, using off-blockchain transactions it is possible to create long-lived channels over which an arbitrary number of transfers can be processed locally between two users, without any burden to the Bitcoin network. These channels may form a network of payment service providers (PSPs). Payments can be routed between any two users in real time, without any confirmation delay. In this work we present a protocol for duplex micropayment channels, which guarantees end-to-end security and allow instant transfers, laying the foundation of the PSP network.",
-	isbn="978-3-319-21741-3"
-}
-
+@inproceedings{10.1007/978-3-319-21741-3_1,
+	abstract = {Bitcoin does not scale, because its synchronization mechanism, the blockchain, limits the maximum rate of transactions the network can process. However, using off-blockchain transactions it is possible to create long-lived channels over which an arbitrary number of transfers can be processed locally between two users, without any burden to the Bitcoin network. These channels may form a network of payment service providers (PSPs). Payments can be routed between any two users in real time, without any confirmation delay. In this work we present a protocol for duplex micropayment channels, which guarantees end-to-end security and allow instant transfers, laying the foundation of the PSP network.},
+	address = {Cham},
+	author = {Decker, Christian and Wattenhofer, Roger},
+	booktitle = {Stabilization, Safety, and Security of Distributed Systems},
+	editor = {Pelc, Andrzej and Schwarzmann, Alexander A.},
+	isbn = {978-3-319-21741-3},
+	pages = {3--18},
+	publisher = {Springer International Publishing},
+	title = {A Fast and Scalable Payment Network with Bitcoin Duplex Micropayment Channels},
+	year = {2015}}
 
 @misc{superlight,
 	author = {Yuan Lu and Qiang Tang and Guiling Wang},
-	title = {Generic Superlight Client for Permissionless Blockchains},
 	howpublished = {Cryptology {ePrint} Archive, Paper 2020/844},
+	title = {Generic Superlight Client for Permissionless Blockchains},
+	url = {https://eprint.iacr.org/2020/844},
 	year = {2020},
-	url = {https://eprint.iacr.org/2020/844}
-}
+	bdsk-url-1 = {https://eprint.iacr.org/2020/844}}
 
 @misc{flyclient,
-	author = {Benedikt Bünz and Lucianna Kiffer and Loi Luu and Mahdi Zamani},
-	title = {Flyclient: Super-Light Clients for Cryptocurrencies},
+	author = {Benedikt B{\"u}nz and Lucianna Kiffer and Loi Luu and Mahdi Zamani},
 	howpublished = {Cryptology {ePrint} Archive, Paper 2019/226},
+	title = {Flyclient: Super-Light Clients for Cryptocurrencies},
+	url = {https://eprint.iacr.org/2019/226},
 	year = {2019},
-	url = {https://eprint.iacr.org/2019/226}
-}
+	bdsk-url-1 = {https://eprint.iacr.org/2019/226}}
 
 @inproceedings{payment-channel,
-	author = {Malavolta, Giulio and Moreno-Sanchez, Pedro and Kate, Aniket and Maffei, Matteo and Ravi, Srivatsan},
-	title = {Concurrency and Privacy with Payment-Channel Networks},
-	year = {2017},
-	isbn = {9781450349468},
-	publisher = {Association for Computing Machinery},
-	address = {New York, NY, USA},
-	url = {https://doi.org/10.1145/3133956.3134096},
-	doi = {10.1145/3133956.3134096},
 	abstract = {Permissionless blockchains protocols such as Bitcoin are inherently limited in transaction throughput and latency. Current efforts to address this key issue focus on off-chain payment channels that can be combined in a Payment-Channel Network (PCN) to enable an unlimited number of payments without requiring to access the blockchain other than to register the initial and final capacity of each channel. While this approach paves the way for low latency and high throughput of payments, its deployment in practice raises several privacy concerns as well as technical challenges related to the inherently concurrent nature of payments that have not been sufficiently studied so far. In this work, we lay the foundations for privacy and concurrency in PCNs, presenting a formal definition in the Universal Composability framework as well as practical and provably secure solutions. In particular, we present Fulgor and Rayo. Fulgor is the first payment protocol for PCNs that provides provable privacy guarantees for PCNs and is fully compatible with the Bitcoin scripting system. However, Fulgor is a blocking protocol and therefore prone to deadlocks of concurrent payments as in currently available PCNs. Instead, Rayo is the first protocol for PCNs that enforces non-blocking progress (i.e., at least one of the concurrent payments terminates). We show through a new impossibility result that non-blocking progress necessarily comes at the cost of weaker privacy. At the core of Fulgor and Rayo is Multi-Hop HTLC, a new smart contract, compatible with the Bitcoin scripting system, that provides conditional payments while reducing running time and communication overhead with respect to previous approaches. Our performance evaluation of Fulgor and Rayo shows that a payment with 10 intermediate users takes as few as 5 seconds, thereby demonstrating their feasibility to be deployed in practice.},
+	address = {New York, NY, USA},
+	author = {Malavolta, Giulio and Moreno-Sanchez, Pedro and Kate, Aniket and Maffei, Matteo and Ravi, Srivatsan},
 	booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
-	pages = {455–471},
-	numpages = {17},
+	doi = {10.1145/3133956.3134096},
+	isbn = {9781450349468},
 	keywords = {bitcoin, concurrency, payment-channel network, privacy, scalability},
 	location = {Dallas, Texas, USA},
-	series = {CCS '17}
-}
+	numpages = {17},
+	pages = {455--471},
+	publisher = {Association for Computing Machinery},
+	series = {CCS '17},
+	title = {Concurrency and Privacy with Payment-Channel Networks},
+	url = {https://doi.org/10.1145/3133956.3134096},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1145/3133956.3134096}}
 
-@InProceedings{blindsigs,
-author="Fuchsbauer, Georg
-and Wolf, Mathias",
-editor="Joye, Marc
-and Leander, Gregor",
-title="Concurrently Secure Blind Schnorr Signatures",
-booktitle="Advances in Cryptology -- EUROCRYPT 2024",
-year="2024",
-publisher="Springer Nature Switzerland",
-address="Cham",
-pages="124--160",
-abstract="Many applications of blind signatures, e.g. in blockchains, require compatibility of the resulting signatures with the existing system. This makes blind issuing of Schnorr signatures (now being standardized and supported by major cryptocurrencies) desirable. Concurrent security of the signing protocol is required to thwart denial-of-service attacks.",
-isbn="978-3-031-58723-8"
-}
+@inproceedings{blindsigs,
+	abstract = {Many applications of blind signatures, e.g. in blockchains, require compatibility of the resulting signatures with the existing system. This makes blind issuing of Schnorr signatures (now being standardized and supported by major cryptocurrencies) desirable. Concurrent security of the signing protocol is required to thwart denial-of-service attacks.},
+	address = {Cham},
+	author = {Fuchsbauer, Georg and Wolf, Mathias},
+	booktitle = {Advances in Cryptology -- EUROCRYPT 2024},
+	editor = {Joye, Marc and Leander, Gregor},
+	isbn = {978-3-031-58723-8},
+	pages = {124--160},
+	publisher = {Springer Nature Switzerland},
+	title = {Concurrently Secure Blind Schnorr Signatures},
+	year = {2024}}
 
 @misc{circom,
-  title = {{Iden3} Circom Circuit Compiler},
-  howpublished = {\url{https://github.com/iden3/circom}},
-  note = {Accessed: 2025-01-30}
-}
+	howpublished = {\url{https://github.com/iden3/circom}},
+	note = {Accessed: 2025-01-30},
+	title = {{Iden3} Circom Circuit Compiler}}
 
 @inproceedings{utxoma,
-  author    = {Manuel M. T. Chakravarty and
-               James Chapman and
-               Kenneth MacKenzie and
-               Orestis Melkonian and
-               Jann M{\"{u}}ller and
-               Michael Peyton Jones and
-               Polina Vinogradova and
-               Philip Wadler and
-               Joachim Zahnentferner},
-  editor    = {Tiziana Margaria and
-               Bernhard Steffen},
-  title     = {{UTXO}$_{\textsf{ma}}$: {UTXO} with Multi-asset Support},
-  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation:
-               Applications - 9th International Symposium on Leveraging Applications
-               of Formal Methods, ISoLA 2020, Rhodes, Greece, October 20-30, 2020,
-               Proceedings, Part {III}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12478},
-  pages     = {112--130},
-  publisher = {Springer},
-  year      = {2020},
-  doi       = {10.1007/978-3-030-61467-6_9}
-}
+	author = {Manuel M. T. Chakravarty and James Chapman and Kenneth MacKenzie and Orestis Melkonian and Jann M{\"{u}}ller and Michael Peyton Jones and Polina Vinogradova and Philip Wadler and Joachim Zahnentferner},
+	booktitle = {Leveraging Applications of Formal Methods, Verification and Validation: Applications - 9th International Symposium on Leveraging Applications of Formal Methods, ISoLA 2020, Rhodes, Greece, October 20-30, 2020, Proceedings, Part {III}},
+	doi = {10.1007/978-3-030-61467-6_9},
+	editor = {Tiziana Margaria and Bernhard Steffen},
+	pages = {112--130},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	title = {{UTXO}$_{\textsf{ma}}$: {UTXO} with Multi-asset Support},
+	volume = {12478},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-030-61467-6_9}}
 
 @misc{bitcoin,
-title={{Bitcoin: A Peer-to-Peer Electronic Cash System}},
-author={S. Nakamoto},
-month={October},
-year={2008},
-howpublished={\url{https://bitcoin.org/en/bitcoin-paper}}
-}
+	author = {S. Nakamoto},
+	howpublished = {\url{https://bitcoin.org/en/bitcoin-paper}},
+	month = {October},
+	title = {{Bitcoin: A Peer-to-Peer Electronic Cash System}},
+	year = {2008}}
 
 @misc{ergo,
-  title={{Ergo: A Resilient Platform For Contractual Money}},
-  author={{Ergo Team}},
-  year={2019},
-  howpublished={\url{https://whitepaper.io/document/753/ergo-1-whitepaper}}
-}
+	author = {{Ergo Team}},
+	howpublished = {\url{https://whitepaper.io/document/753/ergo-1-whitepaper}},
+	title = {{Ergo: A Resilient Platform For Contractual Money}},
+	year = {2019}}
 
 @misc{full-cardano,
-title={{Full Cardano Ledger}},
-author = {{Cardano Team}},
-year = {2024},
-howpublished={\url{https://intersectmbo.github.io/formal-ledger-specifications/pdfs/cardano-ledger.pdf}}
-}
+	author = {{Cardano Team}},
+	howpublished = {\url{https://intersectmbo.github.io/formal-ledger-specifications/pdfs/cardano-ledger.pdf}},
+	title = {{Full Cardano Ledger}},
+	year = {2024}}
 
 @online{ethresearch-solvers,
 	author = {{{ETH} research}},
 	title = {A decentralised solver architecture for executing intents on EVM blockchain},
-	year = 2023,
 	url = {https://ethresear.ch/t/a-decentralised-solver-architecture-for-executing-intents-on-evm-blockchain/16608},
-	urldate = {2024-09-07}
-}
+	urldate = {2024-09-07},
+	year = 2023,
+	bdsk-url-1 = {https://ethresear.ch/t/a-decentralised-solver-architecture-for-executing-intents-on-evm-blockchain/16608}}
 
 @techreport{lightning,
-     title = {{The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments}},
-     author = {{Joseph Poon and Thaddeus Dryja}},
-     group = {csg},
-     year = {2010},
-     institution = {University of Zurich, Department of Informatics},
-     month = {01},
-     Date-Added = {2010-01-11 10:05:52},
-     Date-Modified = {2010-07-22 12:08:45}
-}
+	author = {{Joseph Poon and Thaddeus Dryja}},
+	date-added = {2010-01-11 10:05:52},
+	date-modified = {2010-07-22 12:08:45},
+	group = {csg},
+	institution = {University of Zurich, Department of Informatics},
+	month = {01},
+	title = {{The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments}},
+	year = {2010}}
 
 @inproceedings{hydra,
-  title={Fast isomorphic state channels},
-  author={Chakravarty, Manuel MT and Coretti, Sandro and Fitzi, Matthias and Ga{\v{z}}i, Peter and Kant, Philipp and Kiayias, Aggelos and Russell, Alexander},
-  booktitle={Financial Cryptography and Data Security: 25th International Conference, FC 2021, Virtual Event, March 1--5, 2021, Revised Selected Papers, Part II 25},
-  pages={339--358},
-  year={2021},
-  organization={Springer}
-}
+	author = {Chakravarty, Manuel MT and Coretti, Sandro and Fitzi, Matthias and Ga{\v{z}}i, Peter and Kant, Philipp and Kiayias, Aggelos and Russell, Alexander},
+	booktitle = {Financial Cryptography and Data Security: 25th International Conference, FC 2021, Virtual Event, March 1--5, 2021, Revised Selected Papers, Part II 25},
+	organization = {Springer},
+	pages = {339--358},
+	title = {Fast isomorphic state channels},
+	year = {2021}}
 
-@InProceedings{10.1007/3-540-48071-4_7,
-	author="Chaum, David
-	and Pedersen, Torben Pryds",
-	editor="Brickell, Ernest F.",
-	title="Wallet Databases with Observers",
-	booktitle="Advances in Cryptology --- CRYPTO' 92",
-	year="1993",
-	publisher="Springer Berlin Heidelberg",
-	address="Berlin, Heidelberg",
-	pages="89--105",
-	abstract="Previously there have been essentially only two models for computers that people can use to handle ordinary consumer transactions: (1) the tamper-proof module, such as a smart card, that the person cannot modify or probe; and (2) the personal workstation whose inner working is totally under control of the individual. The first part of this article argues that a particular combination of these two kinds of mechanism can overcome the limitations of each alone, providing both security and correctness for organizations as well as privacy and even anonymity for individuals.",
-	isbn="978-3-540-48071-6"
-}
+@inproceedings{10.1007/3-540-48071-4_7,
+	abstract = {Previously there have been essentially only two models for computers that people can use to handle ordinary consumer transactions: (1) the tamper-proof module, such as a smart card, that the person cannot modify or probe; and (2) the personal workstation whose inner working is totally under control of the individual. The first part of this article argues that a particular combination of these two kinds of mechanism can overcome the limitations of each alone, providing both security and correctness for organizations as well as privacy and even anonymity for individuals.},
+	address = {Berlin, Heidelberg},
+	author = {Chaum, David and Pedersen, Torben Pryds},
+	booktitle = {Advances in Cryptology --- CRYPTO' 92},
+	editor = {Brickell, Ernest F.},
+	isbn = {978-3-540-48071-6},
+	pages = {89--105},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Wallet Databases with Observers},
+	year = {1993}}
